fix(FEC-11232): wrap open-answer buttons in container

--- a/modules/Quiz/resources/css/quiz.css
+++ b/modules/Quiz/resources/css/quiz.css
@@ -427,13 +427,18 @@ button.qContinue, button.qApplied {
     margin: 0;
     cursor: default;
 }
+
+.open-answer-footer .open-question-button-wrapper {
+    position: absolute;
+    top: 22%;
+    right: 2.3vw;
+}
+
 #open-question-change-answer, #open-question-clear , #open-question-save{
     font-family: Lato;
     font-size: 2.1vw;
-    position: absolute;
     border-radius: 3px;
     box-shadow: 0 0 2px 0 rgba(0,0,0,0.24);
-    top: 22%;
     border-color: transparent;
     cursor: default;
     padding: 1.1vw 3.3vw;
@@ -442,7 +447,6 @@ button.qContinue, button.qApplied {
 
 #open-question-clear{
     display: inline-block;
-    right: 14.5vw;
     background-color: transparent;
     border: none;
     color: white;
@@ -450,7 +454,6 @@ button.qContinue, button.qApplied {
 }
 
 #open-question-save{
-    right: 2.3vw;
     background-color:white;
     cursor: pointer;
 }
